********************************************************************* *Boton de Creacion de Juego Listener no Configurado *Barra Lateral implementada *Datos de Session de usuario en barra lateral(Drawer) *********************************************************************

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">AndalaarDev</string>
     <string name="title_activity_lista">Lista de Juegos</string>
+    <string name="title_activity_navi">NaviActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
